--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@ant-design/cssinjs": "^1.24.0",
     "@ant-design/nextjs-registry": "^1.2.0",
     "antd": "^5.28.1",
+    "axios": "^1.13.2",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
