--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.2.0",
     "antd": "^5.28.1",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
