--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.4.1",
     "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
